[package]
name = "rimokon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "*" }
tokio = { version = "*", features = ["full"] }
enigo = { version = "*" }
tower = { version = "*", features = ["util"] }
tower-http = { version = "*", features = ["fs", "trace"] }
serde = { version = "*", features = ["derive"] }
local-ip-address = "*"
open = "*"
